--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jane Doe | Desarrollo Web Front-End</title>
+  <title>Jhon Doe | Desarrollo Web Front-End</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="./imagenes/icono.png" type="image/x-icon">
 
@@ -15,6 +15,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!--* Barra de navegacion -->
+  <!-- Bootstratp > Components > Navbar > responsive-behaviors > Toogler (Copiar y pegar) -->
+  <nav class="navbar navbar-expand-md .bg-body">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
+        aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-toggler">
+        <a class="navbar-brand" href="#">
+          <img src="./imagenes/icono.png" alt="Logho de la página web">
+        </a>
+        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Proyectos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Testinomios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </nav>
+
+
+
+
+
 
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
