--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!--* Barra de navegacion -->
+  <!--* Barra de navegación -->
   <!-- Bootstratp > Components > Navbar > responsive-behaviors > Toogler (Copiar y pegar) -->
   <nav class="navbar navbar-expand-md .bg-body">
     <div class="container-fluid">
@@ -46,7 +46,18 @@
 
   </nav>
 
+  <!--* Sección Hero -->
+  <section class="hero aligne-items-strech">
+    <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
+      <img class="hero-imagen-desarrollador rounded-circle"  src="./imagenes/desarrollador-ejemplo.svg" alt="Foto de Jhon Doe">
+      <h1>Hola, soy Jhon Doe</h1>
+      <h2>Desarrollo sitios web y escribo artículos sobre programación</h2>
+    </div>
 
+    <div class="her-inferior">
+      <img class="hero-inferior-imagen img-fluid" src="./imagenes/hero-inferior.svg" alt="monitor, laptop y logos de HTML, CSS JavaScript y React">
+    </div>
+  </section>
 
 
 
