Crear seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
     </div>
   </section>
 
+  <!--* Sección Sobre Mí -->
+  <section class="sobre-mi seccion-oscura">
+    <div class="contenedor">
+      <h2 class="seccion-titulo">Conoce a Jhon Doe</h2>
+      <p class="seccion-texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, beatae adipisci vero facere reprehenderit nostrum error harum nemo doloremque quae molestias eligendi eveniet, quaerat fugit nulla exercitationem ratione incidunt sunt?</p>
+    </div>
+  </section>
+
 
 
 
