Crear sección experiencia

--- a/index.html
+++ b/index.html
@@ -67,6 +67,52 @@
     </div>
   </section>
 
+  <!--* Sección experiencia -->
+  <section class="experiencia seccion-clara">
+    <div class="container text-center">
+      <div class="row">
+        <!-- Estudios -->
+        <div class="columna col-12 col-md-4">
+          <i class="bi bi-mortarboard"></i>
+          <p class="experiencia-titulo">Estudios</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, at perspiciatis odit inventore dolorum,
+            placeat quis ut ea, quod dolores cumque distinctio ullam corrupti consequuntur ex modi vero in doloribus?</p>
+          <div class="badges-contenedor">
+            <!-- https://getbootstrap.com/docs/5.3/components/badge/ -->
+            <span class="badge text-bg-success">Educación básica primaria</span>
+            <span class="badge text-bg-success">Educación básica secundaria</span>
+            <span class="badge text-bg-success">Educación media</span>
+          </div>
+        </div>
+        <!-- Desarrollo web -->
+        <div class="columna col-12 col-md-4">
+          <i class="bi bi-code-slash"></i>
+          <p class="experiencia-titulo">Desarrollo web</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, at perspiciatis odit inventore dolorum,
+            placeat quis ut ea, quod dolores cumque distinctio ullam corrupti consequuntur ex modi vero in doloribus?</p>
+          <div class="badges-contenedor">
+            <span class="badge text-bg-success">HTML</span>
+            <span class="badge text-bg-success">CSS</span>
+            <span class="badge text-bg-success">JavaScript</span>
+            <span class="badge text-bg-success">React</span>
+          </div>
+        </div>
+        <!-- Hobbies -->
+        <div class="columna col-12 col-md-4">
+          <i class="bi bi-emoji-sunglasses"></i>
+          <p class="experiencia-titulo">Hobbies</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, at perspiciatis odit inventore dolorum,
+            placeat quis ut ea, quod dolores cumque distinctio ullam corrupti consequuntur ex modi vero in doloribus?</p>
+          <div class="badges-contenedor">
+            <span class="badge text-bg-success">Escribir</span>
+            <span class="badge text-bg-success">Dibujar</span>
+            <span class="badge text-bg-success">Leer</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
