crear seccion de pie de pagina

--- a/index.html
+++ b/index.html
@@ -314,6 +314,31 @@
     </div>
   </section>
 
+  <!--* Sección footer -->
+  <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+    <img class="footer-logo" src="./imagenes/icono-blanco.svg" alt="logo del portafolio">
+    <p class="footer-texto text-center">Aprendo y creo todos los días. <br>Creemos un proyecto juntos.</p>
+    <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+      <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrrer">
+        <i class="bi bi-twitter"></i>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrrer">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrrer">
+        <i class="bi bi-linkedin"></i>
+      </a>
+      <a href="https://github.com" target="_blank" rel="noopener noreferrrer">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="mailto:jhondoe@micorreo.com" target="_blank" rel="noopener noreferrrer">
+        <i class="bi bi-envelope"></i>
+      </a>
+    </div>
+    <div class="derechos-de-autor">Creado por Jhon Doe (2023) &copy;</div>
+  </footer>
+
+
 
 
 
