--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </a>
         <ul class="navbar-nav d-flex justify-content-center align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Sobre mí</a>
+            <a class="nav-link active" aria-current="page" href="#sobre-mi">Sobre mí</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Proyectos</a>
+            <a class="nav-link" href="#proyectos">Proyectos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Testinomios</a>
+            <a class="nav-link" href="#testimonios">Testinomios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -51,9 +51,10 @@
   <!--* Sección Hero -->
   <section class="hero aligne-items-strech">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-imagen-desarrollador rounded-circle"  src="./imagenes/desarrollador-ejemplo.svg" alt="Foto de Jhon Doe">
+      <img class="hero-imagen-desarrollador rounded-circle"  src="./imagenes/Persona-5.jpeg" alt="Foto de Jhon Doe">
       <h1>Hola, soy Jhon Doe</h1>
-      <h2>Desarrollo sitios web y escribo artículos sobre programación</h2>
+      <h2>Desarrollo sitios y aplicaciones web<br>
+          Creo tutoriales en video con contenido educativo sobre programación y tecnología</h2>
     </div>
 
     <div class="her-inferior">
@@ -62,7 +63,7 @@
   </section>
 
   <!--* Sección Sobre Mí -->
-  <section class="sobre-mi seccion-oscura">
+  <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor">
       <h2 class="seccion-titulo">Conoce a Jhon Doe</h2>
       <p class="seccion-texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, beatae adipisci vero facere reprehenderit nostrum error harum nemo doloremque quae molestias eligendi eveniet, quaerat fugit nulla exercitationem ratione incidunt sunt?</p>
@@ -116,7 +117,7 @@
   </section>
 
   <!--* Sección proyectos -->
-  <section class="proyectos-recientes seccion-clara d-flex flex-column">
+  <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
     <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
     <h3 class="seccion-descripcion">Estos son algunos proyectos que he creado recientemente...</h3>
     <!-- Galeriad e proyectos-->
@@ -249,30 +250,30 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container">
-            <img class="testimonio-imagen rounded-circle" src="./imagenes/cliente1.svg" alt="Foto de Gino">
+            <img class="testimonio-imagen rounded-circle" src="./imagenes/image-daniel.jpg" alt="Foto de Daniel">
             <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam facilis fuga voluptatibus sint doloribus explicabo possimus dolore sunt quidem at corporis in, amet earum, atque saepe voluptates.</p>
             <div class="testimonio-info">
-              <p class="cliente">Gino</p>
+              <p class="cliente">Daniel</p>
               <p class="cargo">Gerente de proyectos en Desarrollo Web</p>
             </div>
           </div>
         </div>
         <div class="carousel-item active">
           <div class="container">
-            <img class="testimonio-imagen rounded-circle" src="./imagenes/cliente2.svg" alt="Foto de Nohora">
+            <img class="testimonio-imagen rounded-circle" src="./imagenes/image-jeanette.jpg" alt="Foto de Jeanette">
             <p class="testimonio-texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta atque ipsam, eaque facere doloremque, alias corrupti aut, at deserunt mollitia amet consectetur ducimus.</p>
             <div class="testimonio-info">
-              <p class="cliente">Nohora</p>
+              <p class="cliente">Jeanette</p>
               <p class="cargo">Gerente de Diseña mi Página Web</p>
             </div>
           </div>
         </div>
         <div class="carousel-item active">
           <div class="container">
-            <img class="testimonio-imagen rounded-circle" src="./imagenes/cliente3.svg" alt="Foto de Leonardo">
+            <img class="testimonio-imagen rounded-circle" src="./imagenes/image-jonathan.jpg" alt="Foto de Jonathan">
             <p class="testimonio-texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla cum recusandae eius aut tempore delectus, quos laboriosam, dolore quas nemo voluptates nobis sunt.</p>
             <div class="testimonio-info">
-              <p class="cliente">Leonardo</p>
+              <p class="cliente">Jonathan</p>
               <p class="cargo">Director de aprende a Programar</p>
             </div>
           </div>
@@ -299,7 +300,9 @@
             ¡Hablemos!
           </div>
           <div class="col-12 col-md-4 descripcion">
-            Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
+            Juntos, llevaremos tu visión a la realidad digital.<br>
+            Contáctame ahora para comenzar tu
+            emocionante viaje hacia un sitio web impactante y funcional que destaque en la web.
           </div>
           <div class="col-12 col-md-4">
             <a href="mailto:jhondoe@micorreo.com">
@@ -335,11 +338,8 @@
         <i class="bi bi-envelope"></i>
       </a>
     </div>
-    <div class="derechos-de-autor">Creado por Jhon Doe (2023) &copy;</div>
+    <div class="derechos-de-autor">Creado por David Guerrero (2023) &copy;</div>
   </footer>
-
-
-
 
 
   <!-- Bootstrap -->
